--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="music_name">山丘</string>
-    <string name="music_singer">歌手：李宗盛</string>
-    <string name="music_record">专辑：山丘</string>
+    <string name="music_singer">李宗盛</string>
+    <string name="music_record">山丘</string>
+    <string name="singer">歌手：</string>
+    <string name="record">专辑：</string>
     <string name="music_cur_time">03:33</string>
     <string name="music_end_time">03:42</string>
 
