--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MusicPlayerTest</string>
+    <string name="app_name">MusicPlayer</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="music_name">山丘</string>
@@ -9,7 +9,7 @@
     <string name="music_record">山丘</string>
     <string name="singer">歌手：</string>
     <string name="record">专辑：</string>
-    <string name="music_cur_time">03:33</string>
+    <string name="music_cur_time">00:00</string>
     <string name="music_end_time">03:42</string>
 	<string name="music_list">音乐播放列表</string>
 </resources>
